Uploaded  the Add button (html+js+css)
Uploaded  the Add button (html+js+css):
*added server-side logic for the Add button
*added functionality for the Add button
*modified css properties for the Add button.

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
                 <li class="right">
                     <li>
                         <!-- Manage button -->
-                        <button id="manageButton" data-key="manage" data-dropdown-toggle="manageSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Manage<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
-                        </svg>
+                        <button id="manageButton" data-key="manage" data-dropdown-toggle="manageSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+                            Manage
+                            <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+                            </svg>
                         </button>
 
                         <!-- Manage menu -->
@@ -63,21 +65,23 @@
                         </ul>
                     </li>
                     <li>
-                        <button id="addButton" data-key="add"style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                        <!-- Add button -->
+                        <button id="addButton" data-key="add"style="cursor: pointer" data-dropdown-placement="bottom" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                             Add
                             <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                             </svg>
                         </button>
-
-                        <div id="addSearch" class="absolute left-0 mt-2 hidden z-10 bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer">
+                        
+                        <!-- Add menu -->
+                        <div id="addSearch" class="absolute mt-2 z-10 hidden bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer">
                             <ul id="add-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 mb-3 p-2">
-                            <li class="event-option py-2 px-3 w-full text-left bg-blue-100 hover:bg-blue-200 rounded cursor-pointer">
-                                Event
-                            </li>
-                            <li class="fewEvents-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded cursor-pointer">
-                                Few Events
-                            </li>
+                                <li class="event-option py-2 px-3 w-full text-left bg-blue-100 hover:bg-blue-200 rounded cursor-pointer">
+                                    Event
+                                </li>
+                                <li class="fewEvents-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded cursor-pointer">
+                                    Few Events
+                                </li>
                             </ul>
                         </div>
                     
@@ -90,7 +94,8 @@
                                 <input type="text" name="title" placeholder="Title" required />
                                 <textarea name="description" placeholder="Description"></textarea>
                                 <button type="submit">Add</button>
-                                <button type="button" onclick="closeModal()">Cancel</button>
+                                <button type="button" onclick="closeModal(document.getElementById('eventModal'))">Cancel</button>
+
                             </form>
                         </div>
                         </div>
@@ -103,16 +108,19 @@
                                 <input type="text" name="summary" placeholder="Summary" required />
                                 <textarea name="details" placeholder="Details"></textarea>
                                 <button type="submit">Add</button>
-                                <button type="button" onclick="closeModal()">Cancel</button>
+                                <button type="button" onclick="closeModal(document.getElementById('eventModal'))">Cancel</button>
+
                             </form>
                         </div>
                         </div>
                     </li>
                     <li>
                         <!-- Color theme button -->
-                        <button id="colorThemeButton" data-key="colorTheme" data-dropdown-toggle="colorThemeSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Color Theme<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
-                        </svg>
+                        <button id="colorThemeButton" data-key="colorTheme" data-dropdown-toggle="colorThemeSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+                            Color Theme
+                            <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+                            </svg>
                         </button>
 
                         <!-- Color theme menu -->
