--- a/index (1).html
+++ b/index (1).html
@@ -99,13 +99,15 @@
                         </ul>
                     </li>
                     <li>
+                        <!-- Add button -->
                         <button id="addButton" data-key="add"style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                             Add
                             <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                             </svg>
                         </button>
-
+                        
+                        <!-- Add menu -->
                         <div id="addSearch" class="hidden z-10 bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer; position:absolute;">
                             <ul id="add-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 mb-3 p-2">
                             <li class="event-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
