Updated the Buttons (html+css):
Updated the Buttons (html+css):
*aligned the positioning of the Manage, Add, and Color Theme buttons to ensure uniform dropdown menu appearance.

--- a/index (1).html
+++ b/index (1).html
@@ -83,7 +83,7 @@
 
                             <!-- Manage menu -->
                             <div id="manageSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer;">
-                                <div class="p-3">
+                                <div class="p-0">
                                 <label for="input-group-search" class="sr-only">Search</label>
                                 <div class="relative">
                                     <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
@@ -92,7 +92,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <ul id="manage-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 mb-3">
+                            <ul id="manage-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 pl-0 pr-2 pt-2 pb-2">
                                 <li class="view-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded">
                                     Modify</li>
                                 <li class="modify-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded">
@@ -103,14 +103,14 @@
                             <!-- Add button -->
                             <button id="addButton" data-key="add"style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                                 Add
-                                <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                <svg class="w-2.5 h-2.5 ms-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                                 </svg>
                             </button>
                             
                             <!-- Add menu -->
                             <div id="addSearch" class="hidden z-10 bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer; position:absolute;">
-                                <ul id="add-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 mb-3 p-2">
+                                <ul id="add-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 pl-0 pr-2 pt-2 pb-2">
                                 <li class="event-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
                                     Event
                                 </li>
@@ -129,7 +129,7 @@
 
                             <!-- Color theme menu -->
                             <div id="colorThemeSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer;">
-                                <div class="px-3 pb-3 ">
+                                <div class="p-0">
                                 <label for="input-group-search" class="sr-only">Search</label>
                                 <div class="relative">
                                     <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
@@ -138,7 +138,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <ul id="theme-options" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 mb-3">
+                            <ul id="theme-options" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 pl-0 pr-2 pt-2 pb-2">
                                 <li class="theme-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded" data-theme="blue">
                                     Blue</li>
                                 <li class="theme-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded" data-theme="yellow">
