Adding correct comments to the code (html+css+js)
Adding correct comments to the code (html+css+js)

--- a/index (1).html
+++ b/index (1).html
@@ -164,19 +164,18 @@
             <form id="eventForm">
                 <input type="text" class="title" name="title" placeholder="Title" required />
 <textarea name="description" class="description" placeholder="Describe your plans for the day"></textarea>
-
                 
                 <!-- Guests (staff) -->
                 <label for="guests">Guests:</label>
                 <select name="guests" id="guests" multiple>
-                    <!-- Здесь динамически список гостей -->
+                    <!-- Dynamic guest list goes here -->
                 </select>
 
                 <!-- Location -->
                  <div>
                     <label for="location">Location:</label>
                     <select name="location" id="location">
-                        <!-- Список локаций -->
+                        <!-- List of locations -->
                     </select>
                 </div>
 
@@ -206,7 +205,7 @@
                 <!-- Guests (staff) -->
                 <label>Guests:</label>
                 <select name="guests[]" multiple>
-                <!-- список гостей -->
+                <!-- Guest list -->
                 </select>
 
                 <!-- Location -->
