--- a/index (1).html
+++ b/index (1).html
@@ -82,22 +82,16 @@
                             </button>
 
                             <!-- Manage menu -->
-                            <div id="manageSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer;">
-                                <div class="p-0">
-                                <label for="input-group-search" class="sr-only">Search</label>
-                                <div class="relative">
-                                    <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
-                                    </svg>
-                                    </div>
-                                </div>
+                            <div id="manageSearch" class="hidden z-10 bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer; position: absolute;">
+                                <ul id="manage-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 pl-0 pr-2 pt-2 pb-2">
+                                    <li class="view-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Modify
+                                    </li>
+                                    <li class="modify-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded cursor-pointer">
+                                    Cancel
+                                    </li>
+                                </ul>
                             </div>
-                            <ul id="manage-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 pl-0 pr-2 pt-2 pb-2">
-                                <li class="view-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded">
-                                    Modify</li>
-                                <li class="modify-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded">
-                                    Cancel</li>
-                            </ul>
                         </li>
                         <li>
                             <!-- Add button -->
@@ -157,13 +151,26 @@
         </div>
     </header>
 
+    <!-- Modal for Cancel Confirmation -->
+    <div id="cancelModal" class="modal hidden">
+    <div class="modal-content">
+        <h2 class="modalHeader">Remove all events.</h2>
+        <p>Are you sure you want to remove all events from the selected time slot?</p>
+        
+        <div class="modalButton">
+        <button id="confirmCancelButton" class="hover:bg-red-600">Yes, remove</button>
+        <button id="declineCancelButton" class="hover:bg-gray-600">No</button>
+        </div>
+    </div>
+    </div>
+
     <!-- Modal for Event -->
     <div id="eventModal" class="modal hidden">
         <div class="modal-content">
             <h2 class="modalHeader">Add a new Event</h2>
             <form id="eventForm">
                 <input type="text" class="title" name="title" placeholder="Title" required />
-<textarea name="description" class="description" placeholder="Describe your plans for the day"></textarea>
+                <textarea name="description" class="description" placeholder="Describe your plans for the day"></textarea>
                 
                 <!-- Guests (staff) -->
                 <label for="guests">Guests:</label>
