Updated the button Update (html+js)
Updated the button Update (html+js):
*add html for the button Update
*update button logic has been implemented (js).

--- a/index (1).html
+++ b/index (1).html
@@ -69,7 +69,7 @@
         <div class="right">
             <ul class="list">
                 <li>
-                    <button class="update"></button>
+                    <button class="update" id="updatePageBtn" title="Update"></button>
                     <button class="dots"></button>
                 </li>
                 <li class="right">
